# riddles_and_ruins

./: .gitignore  README.md  RIDDLES_&_RUINS.md  pyproject.toml
src/: game.py  main.py  player.py  quest.py
src/dungeons/: dungeon.py  dungeon1.py  dungeon2.py  dungeon3.py  dungeon4.py  dungeon5.py  dungeon6.py
src/encounters/: combat.py  puzzles.py
src/items/: __init__.py  inventory.py
src/utils/: constants.py  puzzles.json
tests/: conftest.py  test_game.py  test_inventory.py  test_player.py  test_quest.py
