[tool.poetry]
name = "riddles-and-ruins"
version = "0.1.0"
description = "A text-based adventure game where players explore locations, encounter challenges, and complete quests."
authors = ["ugale.kunal@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"